--- a/1.html
+++ b/1.html
@@ -28,55 +28,115 @@ html : 가장 위에 오는 태그(html 태그 위에는 항상 관용적으로 
 
 그리고 가장 중요한 태그 중 하나인 anchor, 그리고 속성인 hypertext reference
 <a href="~~" title="~~" target="~~"></a>
+
+추가 컨텐츠
+
+영상 추가 : <iframe src="" width="" height=""></iframe>
+
+댓글 추가 : (disqus, livere 서비스 활용)
+
+채팅 서비스 추가 : (tawk.to 서비스 활용)
+
+웹페이지 분석기 : (analytics.google.com)
+
 -->
 <!doctype html>
 <html>
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <!-- CSS임을 알리고, 문서 안의 모든 a 태그에 다음 효과를 주도록 함  -->
+
+  <!--
+  .saw와 같이 선택자 앞에 .을 넣으면, 모든 class 안의 saw를 선택하게 함
+  class는 사용자 정의 묶음을 뜻? 그래서 saw 나 active는 사용자 정의 단어?
+  참고로 # > .
+
+  각각을 id 선택자, class 선택자라고 함
+  id 선택자가 class 선택자보다 우선
+
+  tag 선택자 < class 선택자(문서에 복수로 등장) < id 선택자(문서에 하나만 있어야 함)
+  ※ 구체적인 것이 포괄적인 것보다 우선, 원칙과 예외 정도..?
+
+  검색창에 'css selector'를 타이핑
+  -->
+  <!--
+  <style>
+    a{
+      color:black;
+      text-decoration: none;
+    }
+    #active{
+      color:red;
+    }
+    .saw{
+      color:gray;
+    }
+    h1{
+      font-size:45px;
+      text-align: center;
+    }
+  </style>
+  -->
 </head>
 
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw" id="active">HTML</a></li>
+      <!-- 개별적으로 폰트 색을 변경하기 위해선 아래와 같이 가능. 이때 html 태그와의 구분을 위해 style이라는 attribute를 사용하기로 합의 되어 있음
+      style 태그를 CSS로 해석하라(물론 html 태그임)
 
-  <h2>HTML</h2>
+      style 태그 혹은 style 속성으로 CSS 효과를 준다.
+      -->
+      <li><a href="2.html" class="saw"> <!--style="color:red;text-decoration:underline"-->CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
 
-  <p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7oSChNbmRjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
-  
-  <p><a href="https://www.w3.org/TR/2010/WD-html5-20100624/" title="HTML5 Specification" target="_blank">HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)</a>라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
-  <img src="coding.jpg" width="100%">
-  <p style="margin-top:45px;">HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고 이미지와 객체를 내장하고 대화형 양식을 생성하는 데 사용될 수 있다. HTML은 웹 페이지 콘텐츠 안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다. HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에 영향을 주는 자바스크립트와 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.</p>
+  <!--
+  h1, a 태그는 문서를 설명하지만, font 라는 태그는 그렇지 않다.
+  문서 정보와 디자인은 분리되어야 한다.
 
-  <p>
-    <div id="disqus_thread"></div>
-      <script>
+    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+    <ol>
+      <li><a href="1.html"><font color="red">HTML</font></a></li>
+      <li><a href="2.html"><font color="red">CSS</font></a></li>
+      <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    </ol>
+  -->
+      <div id="article">
+      <h2>HTML</h2>
+      <p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7oSChNbmRjs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </p>
+      <p><a href="https://www.w3.org/TR/2010/WD-html5-20100624/" title="HTML5 Specification" target="_blank">HTML은 하이퍼텍스트 마크업 언어(HyperText Markup Language, 문화어: 초본문표식달기언어, 하이퍼본문표식달기언어)</a>라는 의미의 웹 페이지를 위한 지배적인 마크업 언어다.</p>
+      <img src="coding.jpg" width="100%">
+      <p style="margin-top:45px;">HTML은 제목, 단락, 목록 등과 같은 본문을 위한 구조적 의미를 나타내는 것뿐만 아니라 링크, 인용과 그 밖의 항목으로 구조적 문서를 만들 수 있는 방법을 제공한다. 그리고 이미지와 객체를 내장하고 대화형 양식을 생성하는 데 사용될 수 있다. HTML은 웹 페이지 콘텐츠 안의 꺾쇠 괄호에 둘러싸인 "태그"로 되어있는 HTML 요소 형태로 작성한다. HTML은 웹 브라우저와 같은 HTML 처리 장치의 행동에 영향을 주는 자바스크립트와 본문과 그 밖의 항목의 외관과 배치를 정의하는 CSS 같은 스크립트를 포함하거나 불러올 수 있다. HTML과 CSS 표준의 공동 책임자인 W3C는 명확하고 표상적인 마크업을 위하여 CSS의 사용을 권장한다.</p>
+      </div>
+  </div>
 
-      /**
-      *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-      *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-      /*
-      var disqus_config = function () {
-      this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-      };
-      */
-      (function() { // DON'T EDIT BELOW THIS LINE
-      var d = document, s = d.createElement('script');
-      s.src = 'https://web1-9ab1epiais.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-      })();
-      </script>
-      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-  </p>
-  
- 
+  <div id="disqus_thread"></div>
+    <script>
+
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-9ab1epiais.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
 </body>
 </html>
